fix visibility hidden
- conservation de l'écart des boutons

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -236,6 +236,9 @@ button:focus {
 	color: white;
 }
 
+.hidden {
+	visibility: hidden;
+}
 /** mode edition **/
 .userLogged {
 	padding-top: 50px;
